# testing

./: README.md
.github/workflows/: Bowling.yml
bowling/: CMakeLists.txt  DirectoryContent.cpp  DirectoryContent.hpp  FlagTests.cpp  FlagTests.hpp  directoryContent.cpp  directoryContent.hpp  main.cpp
bowling/tests/: test.cpp  tests.cpp
